Revision history for URI-geo

0.01    2009-04-21
        - Initial release.

0.02    2009-04-21
        - Make new recognise objects with a location method.
        - Normalise GeoURIs at the poles.
